test/vm/fails/invalid_send_0.js
send(bech32("MMX"), 1 << 128);